overflow fixed?

--- a/UI/src/components/Footer.css
+++ b/UI/src/components/Footer.css
@@ -8,7 +8,7 @@
   align-items: center;
   margin-bottom: -10px;
   margin-left: 0px;
-  width: 100%;
+  width: 90%;
   padding-top: 0px;
 }
 
